# TestTask

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yaml
benchmark/: CMakeLists.txt  gen_data.cpp  main.cpp
data/: small_example_1e5.txt
task1/: CMakeLists.txt
task1/include/: algorithm.hpp  heap_sort_impl.hpp  quick_sort_impl.hpp  stable_sort_imlp.hpp  traits.hpp
task2/: CMakeLists.txt  main.cpp
task2/core/: filter.cpp
task2/include/: filter.hpp  hash.hpp  structs.hpp
task3/: CMakeLists.txt
task3/include/: concave_hull.hpp  geometry.hpp
task3/src/: cli.cpp  concave_hull.cpp  geometry.cpp  main.cpp
task3/src/qt/: hull_controller.cpp  hull_controller.h  main.qml
tests/: CMakeLists.txt  test_task1.cpp  test_task2.cpp  test_task3.cpp
